# tinygo

./: .gitignore  .gitmodules  BUILDING.md  Makefile  codegenerator.go  constants.go  env.sh  go.mod  go.sum  main.go  release.txt  tag.sh  utils.go  wasmchecker.go
.circleci/: config.yml
.github/workflows/: build-macos.yml  build-tinygo.yml  linux.yml  windows.yml
builder/: build.go  cc.go  llvm-ar.cpp  tools-builtin.go
compileopts/: config.go  options.go  target.go
compiler/: alias.go  calls.go  compiler.go  compiler_test.go  utils.go
compiler/testdata/: basic.ll  gc-atmega1284p.ll  gc-cortex-m-qemu.ll  slice.ll
goenv/: version.go
interp/: interpreter.go
lib/eosio/: CMakeLists.txt  build.sh
lib/eosio/eosiolib/: CMakeLists.txt  malloc.cpp  simple_malloc.cpp
lib/eosio/libc/: CMakeLists.txt
lib/eosio/libc++/: CMakeLists.txt
lib/eosio/modules/: WasmToolchain.cmake
lib/eosio/rt/: CMakeLists.txt
lib/eosio/tools/include/: compiler_options.hpp.in
lib/eosio/tools/include/eosio/: codegen.hpp  gen.hpp  utils.hpp
lib/eosio/tools/include/eosio/whereami/: win.hpp
loader/: goroot.go  loader.go
src/crypto/rand/: rand_getentropy.go  rand_urandom.go
src/examples/callcpp/: hello
src/os/: file_anyos.go  file_other.go  file_unix.go  file_unix_eosio.go
src/runtime/: arch_tinygowasm.go  arch_tinygowasm_eosio.go  baremetal.go  gc_conservative.go  gc_leaking.go  gc_leaking_eosio.go  math.go  mstats_leaking.go  os_linux.go  os_other.go  panic.go  panic_eosio.go  runtime_tinygowasm.go  runtime_tinygowasm_eosio.go  runtime_unix.go  runtime_unix_heap.go  runtime_unix_noheap.go  runtime_wasm_eosio.go  runtime_wasm_js.go
src/syscall/: errno_other.go  proc_emulated.go  proc_hosted.go  syscall_libc.go  syscall_libc_wasi.go
targets/: eosio.json
tests/astparser/: astparser  astparser.go  test.go
tests/eosio/testalloc/: build.sh  go.mod  go.sum  test.go  test.sh
tests/eosio/testbls256/: build.sh  go.mod  go.sum  test.go  test.py
tests/eosio/testcpp/: build.sh  go.mod  go.sum  test.cpp  test.go  test.py  test.sh
tests/testcodegenerator/: build.sh  go.mod  go.sum  hello.go  test.py  test.sh  testcodegenerator.go
tests/testcodegenerator/cpp/: test.cpp
tests/testruntime/: test.py  testalloc.go
tools/eosio-go/: eosio-go  eosio-go.go  eosio-go.sh
tools/eosio-strip/: go.mod  go.sum  main.go  wasmchecker.go
tools/wasm-strip/: eosio.wasm.bk  main.go  wasm-strip
transform/testdata/: gc-stackslots.ll  gc-stackslots.out.ll
